# flutter_pikafish

./: .gitmodules  CHANGELOG.md  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  pikafish_stub.cpp
android/src/main/java/cn/chessroad/pikafish_engine/: PikafishEnginePlugin.java
example/: pubspec.yaml  pubspec_overrides.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/cn/chessroad/pikafish_engine_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/src/: output_widget.dart
ios/: pikafish_engine.podspec
ios/Classes/: PikafishEnginePlugin.h  PikafishEnginePlugin.mm
ios/FlutterPikafish/: ffi.cpp
lib/src/: ffi.dart  pikafish.dart
